# artigo

./: .env  .env.sample  Cargo.toml  artigo.db  requests.http
.devcontainer/: .env  devcontainer.json  docker-compose.yml
migrations/: 00_setup.sql  01_users.sql  20250112192944_articles.down.sql  20250112192944_articles.up.sql
src/: cli.rs  lib.rs  main.rs  models.rs
src/server/: mod.rs  models.rs
